# compute-module-connector

./: .gitignore  LICENSE  Makefile  PKG-INFO  README.md  config_backup.json  main.spec  pyproject.toml
models/: pump1_flow.pkl  pump1_sec.pkl  pump2_flow.pkl  pump2_sec.pkl  pump3_flow.pkl  pump3_sec.pkl  pump4_flow.pkl  pump4_sec.pkl  pump5_flow.pkl  pump5_sec.pkl  pump6_flow.pkl  pump6_sec.pkl  pump7_flow.pkl  pump7_sec.pkl  pump8_flow.pkl  pump8_sec.pkl
src/: config.json  main.py  test_algorithm.py
src/havc_algorithm/: base.py  data.py  model.py  optimizer.py  table.py  utils.py
src/havc_algorithm/connector/: __init__.py  _api.py  _back.py  _compute.py  _ethernet.py  _plc.py  _virtual.py
src/idakit/: __init__.py  _expansion.py
