[project]
name = "spst-autoflow"
version = "2.0.0"
description = "Add your description here"
authors = [
    { name = "Matthew Sikai Zhang", email = "sikai.zhang@rockwellautomation.com" }
]
dependencies = [
    "scikit-learn>=1.4.2",
    "pycomm3>=1.2.14",
    "sqlmodel>=0.0.18",
    "requests>=2.31.0",
    "urllib3>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spst_autoflow"]
